[project]
name = "langchaintest"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "langchain>=0.3.19",
    "langchain-community>=0.3.19",
    "google-search-results>=2.4.2",
    "langgraph>=0.3.5",
    "langsmith>=0.3.11",
    "langchain-anthropic>=0.3.9",
    "langchain-openai>=0.3.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/langchaintest"]
